# assemble

./: .eslintrc.cjs  .gitignore  .hc  Cargo.toml  README.md  flake.nix  package-lock.json  package.json  tsconfig.json
stories/: 1-introduction.mdx  2.1-backend-setup.mdx  2.2-integrity.mdx  2.3-coordinator.mdx  3.1-frontend-setup.mdx  3.2-assemble-store.mdx  all-assemblies.stories.js  all-calls-to-action.stories.js  all-collective-commitments.stories.js  assemblies-for-call-to-action.stories.js  assemblies-for-satisfaction.stories.js  assembly-detail.stories.js  assembly-summary.stories.js  call-detail.stories.js  call-summary.stories.js  call-to-action-detail.stories.js  call-to-action-needs-form.stories.js  call-to-action-needs.stories.js  call-to-action-summary.stories.js  call-to-actions-for-call-to-action.stories.js  calls-for-call.stories.js  collective-commitment-detail.stories.js  collective-commitment-summary.stories.js  (+24 more)
tests/: .hc  (+1 more)
zomes/coordinator/assemble/: Cargo.toml
zomes/coordinator/assemble/src/: all_assemblies.rs  all_calls_to_action.rs  all_collective_commitments.rs  assembly.rs  call.rs  call_to_action.rs  collective_commitment.rs  commitment.rs  lib.rs  my_calls_to_action.rs  open_calls_to_action.rs  promise.rs  satisfaction.rs
zomes/coordinator/assemble/tests/: all_assemblies.rs  all_calls_to_action.rs  all_collective_commitments.rs  assembly.rs  call.rs  call_to_action.rs  collective_commitment.rs  commitment.rs  my_calls_to_action.rs  open_calls_to_action.rs  promise.rs  satisfaction.rs
zomes/coordinator/assemble/tests/common/: mod.rs
(+86 files in other folders)
