[package]
name = "hc_zome_assemble_coordinator"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "hc_zome_assemble_coordinator"

[dependencies]
hdk = { workspace = true }

serde = { workspace = true }

assemble_integrity = { path = "../../integrity/assemble", package = "hc_zome_assemble_integrity" }

[dev-dependencies]
futures = { version = "0.3.1", default-features = false }
hdk = { workspace = true, features = ["encoding", "test_utils"] }
holochain = { worskpace = true, default-features = false, features = [
  "test_utils",
] }
tokio = { version = "1.3", features = ["full"] }

